// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FAQItem (EXPAND) renders correctly 1`] = `
<div
  className="sc-AxhUy kDUTqn"
  onClick={[Function]}
>
  <test-file-stub
    className="sc-AxjAm jnIgPP"
  />
  <p
    className="sc-AxiKw cPVhdG"
  >
    Question
  </p>
  <p
    className="sc-AxhCb fMRQhU"
  >
    Anwser
  </p>
</div>
`;

exports[`FAQItem (NOT EXPAND) renders correctly 1`] = `
<div
  className="sc-AxhUy koLheE"
  onClick={[Function]}
>
  <test-file-stub
    className="sc-AxirZ urQxH"
  />
  <p
    className="sc-AxiKw cPVhdG"
  >
    Question
  </p>
  <p
    className="sc-AxhCb fMRQhU"
  >
    Anwser
  </p>
</div>
`;
